**************
RECENT CHANGES
**************

======
1.75.1
======

* Fixed issue #202 - Permission error on Nexcess servers
* Fixed issue #194 - Exported setup script with attribute uses incorrect Setup class (by Jonathan Day)

======
1.75.0
======

* Changed all internal call of own table helper to new native symfony helper.
* Updated dependencies
* Issue #47 - Warning if running as root
* Issue #55 - Multi-reindex
* Issue #171 - open-browser: admin backend
* Issue #116 - Added "report_compared_product_index" and "report_viewed_*" tables to "log" group
* Fixed issue #164 - dev:ide:phpstorm:meta debug mode isn't enough verbose to detect where the problem is
* Fixed issue #187 - Cache flush is not compatible with older versions of Enterprise

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------

Visit our new blog http://magerun.net