@@ -576,7 +576,7 @@ class InstallCommand extends AbstractMagentoCommand
             }
             @chmod($mediaFolder, 0777);
 
-            $finder = new Finder();
+            $finder = Finder::create();
             $finder->directories()
                 ->ignoreUnreadableDirs(true)
                 ->in(array($varFolder, $mediaFolder));
