@@ -109,7 +109,7 @@ class MagentoHelper extends AbstractHelper
     protected function checkModman($folders)
     {
         foreach (array_reverse($folders) as $searchFolder) {
-            $finder = new Finder();
+            $finder = Finder::create();
             $finder
                 ->files()
                 ->ignoreUnreadableDirs(true)
@@ -140,7 +140,7 @@ class MagentoHelper extends AbstractHelper
      */
     protected function _search($searchFolder)
     {
-        $finder = new Finder();
+        $finder = Finder::create();
         $finder
             ->directories()
             ->ignoreUnreadableDirs(true)
